# jccodingchallenge

./: LICENSE  README.md
wctool/: README.md  pyproject.toml
wctool/wctool/: WCTool.py  command.py  file.txt
