[tool.poetry]
name = "wctool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
ccwc = "wctool.command:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
